<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="Notifications">
        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/settings_key_toggle_delete_notifications"
            android:summary="Receive a notification when a listing i joined is deleted"

            android:title="Listing Deleted" />

        <SwitchPreference
            android:defaultValue="true"
            android:key="@string/settings_key_toggle_create_notifications"
            android:summary="Receive a notification when new listings of my current modules is created"
            android:title="Listing Created" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/settings_key_toggle_chat_notifications"
            android:summary="Receive chat notifications from listings I have joined"
            android:title="Listing Chat" />
    </PreferenceCategory>

    <PreferenceCategory android:title="Study Session Filters">
        <SwitchPreference
            android:defaultValue="false"
            android:key="@string/settings_key_toggle_unrelated_modules"
            android:summary="Turning this on will allow you to filter study sessions by any module, even those that you were never enrolled in. This is disabled by default to reduce clutter."
            android:title="Include Unrelated Modules" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Profile">

        <com.afollestad.materialdialogs.prefs.MaterialEditTextPreference
            android:inputType="text|textCapWords|textNoSuggestions"
            android:key="@string/settings_key_change_display_name"
            android:textColor="@color/colorTextPrimary"
            android:title="Change Display Name"
            app:useStockLayout="true" />

    </PreferenceCategory>
</PreferenceScreen>