<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true"
    tools:context=".profile.ProfileFragment">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/profile_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".profile.ProfileFragment">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/profile_text_view_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Holo.Large"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/profile_image_view_sex"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:tint="@color/colorWhite"
                app:layout_constraintBottom_toBottomOf="@+id/profile_text_view_name"
                app:layout_constraintStart_toEndOf="@+id/profile_text_view_name"
                app:layout_constraintTop_toTopOf="@+id/profile_text_view_name"
                app:srcCompat="@drawable/gender_male" />
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/profile_text_view_actions_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile_actions"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textSize="16sp"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/status_layout" />

        <TextView
            android:id="@+id/profile_text_view_first_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_text_view_faculty" />

        <TextView
            android:id="@+id/profile_text_view_second_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_text_view_first_major" />

        <TextView
            android:id="@+id/profile_text_view_faculty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_text_view_email" />

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_text_view_second_major" />

        <View
            android:id="@+id/divider3"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="25dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_text_view_modules" />

        <View
            android:id="@+id/divider4"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="?android:attr/listDivider"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />

        <TextView
            android:id="@+id/profile_text_view_modules_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/profile_modules_heading"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider2" />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/status_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/profile_text_view_status_title"
            app:layout_constraintTop_toBottomOf="@+id/profile_text_view_status_title">

            <android.support.design.button.MaterialButton
                android:id="@+id/profile_button_update_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Apply Changes"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="12sp"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/profile_text_view_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:visibility="visible"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/profile_plain_text_status_wrapper"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.Dense"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:hint="@string/profile_status_hint"
                android:visibility="gone"
                app:boxBackgroundColor="@color/cardViewColorAdmin"
                app:helperText="E.g Contact details, hobbies"
                app:helperTextEnabled="true"
                app:helperTextTextAppearance="@style/AppTheme.HelperText"
                app:layout_constraintEnd_toStartOf="@+id/profile_button_update_status"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/profile_plain_text_status"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text|textCapSentences"
                    android:textColor="@color/colorTextPrimary"
                    android:visibility="visible" />
            </android.support.design.widget.TextInputLayout>
        </android.support.constraint.ConstraintLayout>

        <TextView
            android:id="@+id/profile_text_view_status_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/profile_status_heading"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/profile_text_view_modules"
            app:layout_constraintTop_toBottomOf="@+id/divider3" />

        <Spinner
            android:id="@+id/profile_spinner_select_semester"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            app:layout_constraintBottom_toBottomOf="@+id/profile_text_view_modules_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/profile_text_view_modules_title" />

        <TextView
            android:id="@+id/profile_text_view_modules"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="8sp"
            app:layout_constraintStart_toStartOf="@+id/profile_text_view_modules_title"
            app:layout_constraintTop_toBottomOf="@+id/profile_text_view_modules_title" />


        <Button
            android:id="@+id/profile_button_ban"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/profile_ban"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/profile_text_view_actions_title"
            app:layout_constraintTop_toBottomOf="@+id/profile_text_view_actions_title" />

        <TextView
            android:id="@+id/profile_text_view_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

        <android.support.design.button.MaterialButton
            android:id="@+id/profile_button_make_ta_prof"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Make TA/Prof"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/profile_button_mute"
            app:layout_constraintTop_toBottomOf="@+id/profile_button_mute"
            app:strokeColor="?attr/colorAccent" />

        <android.support.design.button.MaterialButton
            android:id="@+id/profile_button_change_mugger_role"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="Change Mugger Role"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/profile_button_make_ta_prof"
            app:layout_constraintTop_toBottomOf="@+id/profile_button_make_ta_prof"
            app:strokeColor="?attr/colorAccent" />

        <android.support.design.button.MaterialButton
            android:id="@+id/profile_button_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mute this user"
            android:textColor="@color/colorPrimaryDark"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@+id/profile_button_ban"
            app:layout_constraintTop_toTopOf="@+id/profile_button_ban" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>